fix overflow

--- a/packages/app/src/app/app.component.scss
+++ b/packages/app/src/app/app.component.scss
@@ -13,7 +13,3 @@
   top: 0;
   z-index: 9999;
 }
-
-.sb-main {
-  overflow: hidden;
-}
